name:                gore-and-ash-logging
version:             3.0.0.0
synopsis:            Core module for gore-and-ash with logging utilities
description:         Please see README.md
homepage:            https://github.com/Teaspot-Studio/gore-and-ash-logging
license:             BSD3
license-file:        LICENSE
author:              Anton Gushcha
maintainer:          ncrashed@gmail.com
copyright:           2015-2016 Anton Gushcha
category:            Game
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:
  README.md
  CHANGELOG.md
  stack.yaml

library
  hs-source-dirs:      src
  exposed-modules:
    Game.GoreAndAsh.Logging
    Game.GoreAndAsh.Logging.API
    Game.GoreAndAsh.Logging.Module
    Game.GoreAndAsh.Logging.State

  default-language:    Haskell2010
  build-depends:
      base                  >= 4.7      && < 5
    , containers            >= 0.5.6    && < 0.6
    , deepseq               >= 1.4      && < 1.5
    , exceptions            >= 0.8.0.2  && < 0.9
    , extra                 >= 1.4.3    && < 1.5
    , fast-logger           >= 2.4      && < 2.5
    , gore-and-ash          >= 2.0.0.0  && < 2.1
    , hashable              >= 1.2.4.0  && < 1.3
    , mtl                   >= 2.2      && < 2.3
    , reflex                >= 0.5      && < 0.6
    , resourcet             >= 1.1.7.1  && < 1.2
    , text                  >= 1.2.1    && < 1.3
    , text-show             >= 2        && < 4
    , transformers          >= 0.4.2    && < 0.6
    , transformers-base     >= 0.4.4    && < 0.5
    , unordered-containers  >= 0.2.5.1  && < 0.3

  default-extensions:
    DataKinds
    DeriveGeneric
    FlexibleInstances
    GeneralizedNewtypeDeriving
    MultiParamTypeClasses
    OverloadedStrings
    RecordWildCards
    TypeFamilies
    UndecidableInstances
    ScopedTypeVariables
