name:                gore-and-ash-logging
version:             4.0.0.0
synopsis:            Core module for gore-and-ash with logging utilities
description:         Please see README.md
homepage:            https://github.com/Teaspot-Studio/gore-and-ash-logging
license:             BSD3
license-file:        LICENSE
author:              Anton Gushcha
maintainer:          ncrashed@gmail.com
copyright:           2015-2016 Anton Gushcha
category:            Game
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:
  README.md
  CHANGELOG.md
  stack.yaml

flag examples
  description: Enable building of examples
  default:     False

library
  hs-source-dirs:      src
  exposed-modules:
    Game.GoreAndAsh.Console
    Game.GoreAndAsh.Logging
    Game.GoreAndAsh.Logging.API
    Game.GoreAndAsh.Logging.Module
    Game.GoreAndAsh.Logging.State

  default-language:    Haskell2010
  build-depends:
      base                  >= 4.7      && < 5
    , containers            >= 0.5.6    && < 0.6
    , deepseq               >= 1.4      && < 1.5
    , exceptions            >= 0.8.0.2  && < 0.9
    , extra                 >= 1.4.3    && < 1.7
    , fast-logger           >= 2.4      && < 2.5
    , gore-and-ash          >= 3.0      && < 3.1
    , hashable              >= 1.2.4.0  && < 1.3
    , monad-control         >= 1.0      && < 1.1
    , mtl                   >= 2.2      && < 2.3
    , reflex                >= 0.5      && < 0.6
    , resourcet             >= 1.1.7.1  && < 1.3
    , text                  >= 1.2.1    && < 1.3
    , text-show             >= 2        && < 4
    , transformers          >= 0.4.2    && < 0.6
    , transformers-base     >= 0.4.4    && < 0.5
    , unordered-containers  >= 0.2.5.1  && < 0.3

  default-extensions:
    DataKinds
    DeriveGeneric
    FlexibleInstances
    FunctionalDependencies
    GeneralizedNewtypeDeriving
    MultiParamTypeClasses
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    TypeFamilies
    UndecidableInstances

executable gore-and-ash-logging-example01
  if flag(examples)
    buildable: True
  else
    buildable: False

  hs-source-dirs:     examples
  main-is:            Example01.hs
  default-language:   Haskell2010
  build-depends:
      base                  >= 4.7      && < 5
    , exceptions            >= 0.8      && < 0.9
    , gore-and-ash          >= 3.0      && < 3.1
    , gore-and-ash-logging
    , mtl                   >= 2.2      && < 2.3

  default-extensions:
    BangPatterns
    DeriveFunctor
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GeneralizedNewtypeDeriving
    MultiParamTypeClasses
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TypeFamilies
    UndecidableInstances

  ghc-options: -threaded

executable gore-and-ash-logging-example02
  if flag(examples)
    buildable: True
  else
    buildable: False

  hs-source-dirs:     examples
  main-is:            Example02.hs
  default-language:   Haskell2010
  build-depends:
      base                  >= 4.7      && < 5
    , exceptions            >= 0.8      && < 0.9
    , gore-and-ash          >= 3.0      && < 3.1
    , gore-and-ash-logging
    , mtl                   >= 2.2      && < 2.3

  default-extensions:
    BangPatterns
    DeriveFunctor
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GeneralizedNewtypeDeriving
    MultiParamTypeClasses
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TypeFamilies
    UndecidableInstances

  ghc-options: -threaded

executable gore-and-ash-logging-example03
  if flag(examples)
    buildable: True
  else
    buildable: False

  hs-source-dirs:     examples
  main-is:            Example03.hs
  default-language:   Haskell2010
  build-depends:
      base                  >= 4.7      && < 5
    , exceptions            >= 0.8      && < 0.9
    , gore-and-ash          >= 3.0      && < 3.1
    , gore-and-ash-logging
    , mtl                   >= 2.2      && < 2.3

  default-extensions:
    BangPatterns
    DeriveFunctor
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GeneralizedNewtypeDeriving
    MultiParamTypeClasses
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TypeFamilies
    UndecidableInstances

  ghc-options: -threaded
